@@ -1,0 +1,91 @@
+.cm-s-paper{background-color:#fff}
+.cm-s-paper .cm-keyword{color:#555}
+.cm-s-paper .cm-atom{color:#7f8c8d}
+.cm-s-paper .cm-number{color:#7f8c8d}
+.cm-s-paper .cm-def{color:#00f}
+.cm-s-paper .cm-variable{color:#000}
+.cm-s-paper .cm-variable-2{color:#555}
+.cm-s-paper .cm-variable-3{color:#085}
+.cm-s-paper .cm-property{color:#000}
+.cm-s-paper .cm-operator{color:#000}
+.cm-s-paper .cm-comment{color:#959595}
+.cm-s-paper .cm-string{color:#7f8c8d}
+.cm-s-paper .cm-string-2{color:#f50}
+.cm-s-paper .cm-meta{color:#555}
+.cm-s-paper .cm-error{color:#f00}
+.cm-s-paper .cm-qualifier{color:#555}
+.cm-s-paper .cm-builtin{color:#555}
+.cm-s-paper .cm-bracket{color:#997}
+.cm-s-paper .cm-tag{color:#7f8c8d}
+.cm-s-paper .cm-attribute{color:#7f8c8d}
+.cm-s-paper .cm-header{color:#000}
+.cm-s-paper .cm-quote{color:#888}
+.cm-s-paper .cm-hr{color:#999}
+.cm-s-paper .cm-link{color:#7f8c8d}
+.cm-negative{color:#d44}
+.cm-positive{color:#292}
+.cm-header,.cm-strong{font-weight:bold}
+.cm-em{font-style:italic}
+.cm-link{text-decoration:underline}
+.cm-invalidchar{color:#f00}
+div.CodeMirror span.CodeMirror-matchingbracket{color:#0f0}
+div.CodeMirror span.CodeMirror-nonmatchingbracket{color:#f22}
+.CodeMirror{font-size:16px;height:450px;line-height:18px;font-family:"Andale Mono",monaco,"Courier New",courier,monospace;width:900px}
+.CodeMirror-scroll{overflow:auto}
+.CodeMirror-lines{padding:4px 0}
+.CodeMirror pre{padding:0 4px}
+.CodeMirror-scrollbar-filler{background-color:#fff}
+.CodeMirror div.CodeMirror-cursor{border-left:1px solid #000;z-index:3}
+.CodeMirror div.CodeMirror-secondarycursor{border-left:1px solid #adcb83}
+.CodeMirror.cm-keymap-fat-cursor div.CodeMirror-cursor{background:#881102;border:0;width:auto;z-index:1}
+.CodeMirror{position:relative;overflow:hidden}
+.CodeMirror div.CodeMirror-cursor{border-right:none;position:absolute;visibility:hidden;width:0}
+.CodeMirror pre{background-color:transparent;overflow:visible;position:relative}
+.CodeMirror pre span{-moz-border-radius:0;-webkit-border-radius:0;-o-border-radius:0;border-radius:0;border-width:0;overflow:visible;position:relative;white-space:pre-wrap;word-break:normal;word-wrap:normal;z-index:2}
+.CodeMirror span{*vertical-align:text-bottom}
+.CodeMirror-focused .CodeMirror-selected{background:#bdc3c7}
+.CodeMirror-focused div.CodeMirror-cursor{visibility:visible}
+.CodeMirror-hscrollbar{bottom:0;left:0;overflow-x:scroll;overflow-y:hidden}
+.CodeMirror-hscrollbar,.CodeMirror-scrollbar-filler,.CodeMirror-vscrollbar{display:none;position:absolute;z-index:6}
+.CodeMirror-linebackground{bottom:0;left:0;position:absolute;right:0;top:0;z-index:0}
+.CodeMirror-lines{cursor:text}
+.CodeMirror-linewidget{overflow:auto;position:relative;z-index:2}
+.CodeMirror-measure{height:0;overflow:hidden;position:absolute;visibility:hidden;width:100%}
+.CodeMirror-measure pre{position:static}
+.CodeMirror-scroll{margin-bottom:-30px;margin-right:-30px;padding-bottom:30px;padding-right:30px;height:100%;outline:none;position:relative}
+.CodeMirror-scrollbar-filler{bottom:0;right:0;z-index:6}
+.CodeMirror-selected{background:#d9d9d9}
+.CodeMirror-sizer{position:relative}
+.CodeMirror-vscrollbar{overflow-x:hidden;overflow-y:scroll;right:0;top:0}
+.CodeMirror-widget{display:inline-block}
+.CodeMirror-wrap .CodeMirror-scroll{overflow-x:hidden}
+.CodeMirror-wrap pre{white-space:pre-wrap;word-break:normal;word-wrap:break-word}
+.cm-searching{background:#ffa;background:rgba(255,255,0,0.4)}
+@media print{.CodeMirror div.CodeMirror-cursor{visibility:hidden}}.editor-preview{background-color:#f5f5f6;height:100%;left:100%;overflow:auto;position:absolute;top:0;-webkit-transition:left .2s ease;-moz-transition:left .2s ease;-ms-transition:left .2s ease;transition:left .2s ease;width:100%;z-index:9999}
+.editor-preview>p{margin-top:0}
+.editor-preview-active{left:0}
+.editor-statusbar{border-top:1px solid #adcb83;color:#000;font-size:12px;padding:8px 10px;text-align:right}
+.editor-statusbar span{display:inline-block;margin-left:1em;min-width:4em}
+.editor-statusbar .lines:before{content:'lines: '}
+.editor-statusbar .words:before{content:'words: '}
+.editor-toolbar{background-color:#f5f5f6;padding:0 1em;position:relative;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none;vertical-align:middle}
+.editor-toolbar:after,.editor-toolbar:before{background:-moz-linear-gradient(45deg, #f9f9f9, #bdc3c7, #f9f9f9);background:-webkit-linear-gradient(45deg, #f9f9f9, #bdc3c7, #f9f9f9);background:-ms-linear-gradient(45deg, #f9f9f9, #bdc3c7, #f9f9f9);background:linear-gradient(45deg, #f9f9f9, #bdc3c7, #f9f9f9);background-color:#bdc3c7;content:' ';display:block;height:1px}
+.editor-toolbar a{border:1px solid transparent;-khtml-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;cursor:pointer;display:inline-block;height:24px;margin:2px;padding:3px;width:24px}
+.editor-toolbar a:hover,.editor-toolbar a.active{border-color:#adcb83}
+.editor-toolbar a.icon-fullscreen{float:right}
+.editor-toolbar i.separator{border-left:1px solid #adcb83;border-right:1px solid #fff;color:transparent;display:inline-block;line-height:20px;margin:4px 6px 0;vertical-align:top;width:0}
+:-moz-full-screen{background:#f5f5f6;height:100%;padding:.5em 1em;width:100%}
+:-webkit-full-screen{background:#f5f5f6;height:100%;padding:.5em 1em;width:100%}
+.icon-bold{background:url(../img/icons.png) no-repeat 0 -90px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-codeblock{background:url(../img/icons.png) no-repeat -150px -120px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-fullscreen{background:url(../img/icons.png) no-repeat -30px -60px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-h2{background:url(../img/icons.png) no-repeat -240px -180px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-h3{background:url(../img/icons.png) no-repeat -270px -180px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-image{background:url(../img/icons.png) no-repeat -240px 0;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-italic{background:url(../img/icons.png) no-repeat -90px -90px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-link{background:url(../img/icons.png) no-repeat -30px -90px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-ordered-list{background:url(../img/icons.png) no-repeat -150px -30px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-quote{background:url(../img/icons.png) no-repeat -270px -30px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-redo{background:url(../img/icons.png) no-repeat -270px -90px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-undo{background:url(../img/icons.png) no-repeat -240px -90px;display:inline-block;height:16px;overflow:hidden;width:16px}
+.icon-unordered-list{background:url(../img/icons.png) no-repeat -120px -30px;display:inline-block;height:16px;overflow:hidden;width:16px}
